--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'io.apptik.widget:multiselectspinner:1.0.12'
     compile 'com.android.support:design:26.+'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
     testCompile 'junit:junit:4.12'
 }
