--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,10 @@
         <activity android:name=".ProfileView" />
         <activity android:name=".Directory.contacts" />
         <activity android:name=".Directory.MainActivity" />
-        <activity android:name=".Auditions.AuditionActivity"></activity>
+        <activity android:name=".Auditions.AuditionActivity" />
+        <activity android:name=".signupclient" />
+        <activity android:name=".signup3client" />
+        <activity android:name=".StartingScreen"></activity>
     </application>
 
 </manifest>
