craftsmen integration 1 - avi

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'io.apptik.widget:multiselectspinner:1.0.12'
     compile 'com.android.support:design:26.+'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
