--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.example.iyashwant.spiderprojectprototype"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // RecyclerView dependency is added to override the
+    // default 25.3.1 RecyclerView dependency stated by placeholderview
+    // since we are using the 26.+ support libraries in the project
+    
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.clans:fab:1.6.2'
@@ -37,6 +42,12 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.mindorks:placeholderview:0.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    testCompile 'junit:junit:4.12'
 }
