--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,9 @@
         <activity android:name=".Directory.contacts" />
         <activity android:name=".Directory.MainActivity" />
         <activity android:name=".StartingScreen" />
-        <activity android:name=".signup3client"/>
+        <activity android:name=".signup3client" />
         <activity android:name=".signupclient" />
+        <activity android:name=".Swipe.Tinderswipemain"></activity>
     </application>
 
 </manifest>
