--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,19 @@ dependencies {
     compile 'com.mindorks:placeholderview:0.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     testCompile 'junit:junit:4.12'
+
+
+
+    compile 'com.android.support:recyclerview-v7:26.+'
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
+    compile 'com.google.dagger:dagger:2.10'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+
+    compile 'junit:junit:4.12'
 }
