--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,9 +47,12 @@
         <activity android:name=".StartingScreen" />
         <activity android:name=".signup3client" />
         <activity android:name=".signupclient" />
-        <activity android:name=".Swipe.Tinderswipemain"></activity>
+        <activity android:name=".Swipe.Tinderswipemain"/>
         <activity android:name=".Directory"/>
         <activity android:name=".Contacts"/>
+        <activity android:name=".ProfileView2"
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".Main2Activity"/>
     </application>
 
 </manifest>
