--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,23 +6,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
             android:name=".Login2"
             android:windowSoftInputMode="adjustPan">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name=".Login"
@@ -55,11 +52,7 @@
         <activity
             android:name=".Swipe.Tinderswipemain"
             android:parentActivityName=".Main2Activity"
-            android:theme="@style/AppTheme" >
-
-
-
-            </activity>
+            android:theme="@style/AppTheme" />
         <activity android:name=".Contacts" />
         <activity
             android:name=".ProfileView2"
@@ -93,14 +86,6 @@
         <activity
             android:name=".SubscribePopUp2"
             android:theme="@style/AppTheme.CustomTheme" />
-        <activity android:name=".ClientDashboardLayout" />
-        <activity android:name=".DisplayProfile">
-
-
-        </activity>
-
-        <activity android:name=".LoginSocial"></activity>
-
     </application>
 
 </manifest>
