--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
+    compile 'com.google.android.gms:play-services-safetynet:11.6.2'
+    compile 'com.android.volley:volley:1.0.0'
 }
