--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,28 +33,29 @@ dependencies {
     // default 25.3.1 RecyclerView dependency stated by placeholderview
     // since we are using the 26.+ support libraries in the project
 
+    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.android.support:preference-v14:26.+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:cardview-v7:26.+'
 
     compile 'com.github.ksoichiro:android-observablescrollview'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.clans:fab:1.6.2'
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'io.apptik.widget:multiselectspinner:1.0.12'
-    compile 'com.android.support:design:26.+'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:cardview-v7:26.+'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.google.code.gson:gson:2.7'
     compile 'com.mindorks:placeholderview:0.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.jakewharton:butterknife:8.6.0'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.dagger:dagger:2.10'
     compile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
